[package]
name = "orange_trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
linfa-datasets = { version = "0.x", features = ["winequality", "iris"] }
rayon = "1.6.1"